--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -85,7 +85,7 @@
 </p>
 
 <h2><a href="/docs/authentication-security#password-history" id="password-history">Password History</a></h2>
-[TODO: @dlohani please offer some detailed explanation here]
+Once enabled you will be able to set the number of old password hashes is saved for the user. That way, whenever your user changes password, x number of past password hashes are saved and new password is compared against those in the history. If the new password matches any in history, your users will not be allowed to set that password.
 
 <h2><a href="/docs/authentication-security#password-dictionary" id="password-dictionary">Password Dictionary</a></h2>
 [TODO: @dlohani please offer some detailed explanation here]
