--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -85,7 +85,12 @@
 </p>
 
 <h2><a href="/docs/authentication-security#password-history" id="password-history">Password History</a></h2>
-Once enabled you will be able to set the number of old password hashes is saved for the user. That way, whenever your user changes password, x number of past password hashes are saved and new password is compared against those in the history. If the new password matches any in history, your users will not be allowed to set that password.
+<p>Password history prevents users from reusing recent passwords. This protects user accounts from security risks by enforcing a new password everytime it's changed.</p>
+
+<p>Password history can be enabled in the Auth service's <b>Settings</b> on the Appwrite console. You can choose how many previous passwords to remember and block users from reusing them.</p>
 
 <h2><a href="/docs/authentication-security#password-dictionary" id="password-dictionary">Password Dictionary</a></h2>
-Password dictionary once enabled, will compare the user's password against the dictionary (https://github.com/danielmiessler/SecLists/blob/master/Passwords/Common-Credentials/10k-most-common.txt). Whenever new user is created or user is trying to change the password, they will not be allowed to set password that matches any in the dictionary.
+<p>Password dictionary protects users from using bad passwords. It compares the user's password to the <a href="https://github.com/danielmiessler/SecLists/blob/master/Passwords/Common-Credentials/10k-most-common.txt">10,000</a> most common passwords and throws a warning if there's a match. Together with <a href="/docs/rate-limits">rate limits</a>, password dictionary will significantly reduce the chance of a malicious actor from guessing user passwords.</p>
+
+
+<p>Password dictionary can be enabled in the Auth service's <b>Settings</b> on the Appwrite console.</p>
