--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -86,7 +86,7 @@
         </tr>
         <tr>
             <td><code>relationship</code></td>
-            <td>Relationship attribute relates one collection to another. <a href=/docs/databases-relations">Learn more about collections.</a></td>
+            <td>Relationship attribute relates one collection to another. <a href="/docs/databases-relations">Learn more about collections.</a></td>
         </tr>
     </tbody>
 </table>
