--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -252,7 +252,7 @@ func main() async throws {
             <td>Plain Index to allow queries.</td>
         </tr>
         <tr>
-            <td>unique</td>
+            <td><code>unique</code></td>
             <td>Unique Index to disallow duplicates.</td>
         </tr>
         <tr>
