--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -115,7 +115,7 @@
 
 <h2><a href="/docs/queries#building-queries" id="building-queries">Building Queries</a></h2>
 <p>
-    Queries are passed to an endpoint through the <code>queries</code> parameter as an array of query strings, which can be generated using the <code>Query Class</code>.
+    Queries are passed to an endpoint through the <code>queries</code> parameter as an array of query strings, which can be generated using the <code>Query</code> class.
 </p>
 <p>Each query method is logically separated via <code>AND</code> operations. For <code>OR</code> operation, pass multiple values into the query method separated by commas. For example <code>Query.equal("color", ["blue", "yellow"])</code> will fetch blue or yellow.</p>
 
