--- a/app/views/docs/databases-relationships.phtml
+++ b/app/views/docs/databases-relationships.phtml
@@ -116,7 +116,7 @@
 <p>You can create the parent and <b>reference the child documents</b> using their IDs.</p>
 [CODE EXAMPLES]
 
-<h2><a href="/docs/databases-relations#query" id="query">Queryings</a></h2>
+<h2><a href="/docs/databases-relations#query" id="query">Querying</a></h2>
 [TODO: how to query relationships, indexes, etc.]
 <p>You can query documents in a relation by referencing the relationship attribute key using dot-notation. For example, querying for the <code>name</code> <code>customer</code> relationship would look like <code>Query.equal('customer.name', ['John'])</code>.</p>
 
