--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -1,4 +1,4 @@
-<p>Many list endpoints in Appwrite allow you to filter results using queries. Appwrite provides a shared set of query syntax to allow filtering, pagination, and sorting of results.</p>
+<p>Many list endpoints in Appwrite allow you to filter, sort, and paginate results using queries. Appwrite provides a common set of syntax to build queries .</p>
 
 <h2><a href="/docs/queries#query-compatibility" id="queryable-compatibility">Query compatibility</a></h2>
 <p>Each list endpoint supports different query operations. You can find the supported query methods and attributes in the <b>References</b> section of the Appwrite documentation.</p>
@@ -17,37 +17,37 @@
         <tr>
             <td>Equal</td>
             <td><code>Query.equal("title", ["Iron Man"])</code></td>
-            <td>Returns document if attribute is equal to any value in the provided array. Applies to any indexed attribute.</td>
+            <td>Returns document if attribute is equal to any value in the provided array.</td>
         </tr>
         <tr>
             <td>Not Equal</td>
             <td><code>Query.notEqual("title", ["Iron Man"])</code></td>
-            <td>Returns document if attribute is not equal to any value in the provided array. Applies to any indexed attribute.</td>
+            <td>Returns document if attribute is not equal to any value in the provided array.</td>
         </tr>
         <tr>
             <td>Less Than</td>
             <td><code>Query.lessThan("score", 10)</code></td>
-            <td>Returns document if attribute is less than the provided value. Applies to any indexed attribute.</td>
+            <td>Returns document if attribute is less than the provided value.</td>
         </tr>
         <tr>
             <td>Less Than or Equal</td>
             <td><code>Query.lessThanEqual("score", 10)</code></td>
-            <td>Returns document if attribute is less than or equal to the provided value. Applies to any indexed attribute.</td>
+            <td>Returns document if attribute is less than or equal to the provided value.</td>
         </tr>
         <tr>
             <td>Greater Than</td>
             <td><code>Query.greaterThan("score", 10)</code></td>
-            <td>Returns document if attribute is greater than the provided value. Applies to any indexed attribute.</td>
+            <td>Returns document if attribute is greater than the provided value.</td>
         </tr>
         <tr>
             <td>Greater Than or Equal</td>
             <td><code>Query.greaterThanEqual("score", 10)</code></td>
-            <td>Returns document if attribute is greater than or equal to the provided value. Applies to any indexed attribute.</td>
+            <td>Returns document if attribute is greater than or equal to the provided value.</td>
         </tr>
         <tr>
             <td>Between</td>
             <td><code>Query.between("price", [5, 10])</code></td>
-            <td>Returns document if attribute value falls between a range.</td>
+            <td>Returns document if attribute value falls between the two values. The boundary values are inclusive.</td>
         </tr>
         <tr>
             <td>Is Null</td>
@@ -92,7 +92,7 @@
         <tr>
             <td>Limit</td>
             <td><code>Query.limit(25)</code></td>
-            <td>Limits the number of results returned by the query. Used for <a href="/docs/pagination#offset-pagination" id="offset-pagination">pagination</a>.</td>
+            <td>Limits the number of results returned by the query. Used for <a href="/docs/pagination#offset-pagination" id="offset-pagination">pagination</a>. If the limit query is not used, the limit defaults to 25 results.</td>
         </tr>
         <tr>
             <td>Offset</td>
@@ -117,7 +117,7 @@
 <p>
     Queries are passed to an endpoint through the <code>queries</code> parameter as an array of query strings, which can be generated using the <code>Query</code> class.
 </p>
-<p>Each query method is logically separated via <code>AND</code> operations. For <code>OR</code> operation, pass multiple values into the query method separated by commas. For example <code>Query.equal("color", ["blue", "yellow"])</code> will fetch blue or yellow.</p>
+<p>Each query method is logically separated via <code>AND</code> operations. For <code>OR</code> operation, pass multiple values into the query method separated by commas. For example <code>Query.equal('title', ['Avatar', 'Lord of the Rings'])</code> will fetch the movies "Avatar" or "Lord of the Rings".</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
