--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td>Starts With</td>
-            <td><code>Query.startsWith("name", ["Once upon a time"])</code></td>
+            <td><code>Query.startsWith("name", "Once upon a time")</code></td>
             <td>Returns documents if a string attributes starts with a substring.</td>
         </tr>
         <tr>
