--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -89,8 +89,12 @@ $cols = [
                 </div>
 
                 <ul class="margin-bottom">
-                    <li><a href="/docs/databases">Databases</a></li>
-                    <li><a href="/docs/storage">Storage</a></li>
+                    <li>
+                        <a href="/docs/databases"><i class="icon-right-dir"></i> Databases</a>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/databases-relationships" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Relationships (Beta)</a></li>
+                        </ul>
+                    </li>                    <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/authentication">Authentication</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
                     <li><a href="/docs/queries">Queries</a></li>
