Fix some formatting quirks

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -94,7 +94,8 @@ $cols = [
                         <ul class="margin-top-small margin-bottom-small">
                             <li>&nbsp;&nbsp;<a href="/docs/databases-relationships" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Relationships (Beta)</a></li>
                         </ul>
-                    </li>                    <li><a href="/docs/storage">Storage</a></li>
+                    </li>                    
+                    <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/authentication">Authentication</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
                     <li><a href="/docs/queries">Queries</a></li>
