--- a/app/views/docs/authentication-server.phtml
+++ b/app/views/docs/authentication-server.phtml
@@ -140,9 +140,9 @@ client = Client()
 
 include Appwrite
 
-client = Client
+client = Client.new
 
-client.new
+client
     .set_endpoint('https://[HOSTNAME_OR_IP]/v1')            # Your API Endpoint
     .set_project('5df5acd0d48c2')                           # Your project ID
     .set_jwt('eyJ9.eyJ...')                                 # Your secret JSON Web Token</code></pre>
