--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td>Not Equal</td>
-            <td><code>Query.notEqual("title", ["Iron Man"])</code></td>
+            <td><code>Query.notEqual("title", "Iron Man")</code></td>
             <td>Returns document if attribute is not equal to any value in the provided array.</td>
         </tr>
         <tr>
