--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -1,4 +1,4 @@
-<p>Many list endpoints in Appwrite allow you to filter, sort, and paginate results using queries. Appwrite provides a common set of syntax to build queries .</p>
+<p>Many list endpoints in Appwrite allow you to filter, sort, and paginate results using queries. Appwrite provides a common set of syntax to build queries.</p>
 
 <h2><a href="/docs/queries#query-compatibility" id="queryable-compatibility">Query compatibility</a></h2>
 <p>Each list endpoint supports different query operations. You can find the supported query methods and attributes in the <b>References</b> section of the Appwrite documentation.</p>
@@ -72,7 +72,7 @@
         <tr>
             <td>Search</td>
             <td><code>Query.search("text", "key words")</code></td>
-            <td>Searches string attributes for provided keywords. Applies to any string attribute with a full-text index.</td>
+            <td>Searches string attributes for provided keywords. Requires a <a href="/docs/databases#indexes">Full-text index</a> on queried attributes.</td>
         </tr>
         <tr>
             <td>Select</td>
